# SprintDuck

./: .env.example  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml
backend/app/: __init__.py  agent.py  harness.py  main.py  markdown.py  models.py  providers.py  role_presets.py  session_store.py
backend/app/agent/: __init__.py  core.py
backend/app/agent/harness/: __init__.py  registry.py  runtime.py
backend/app/agent/harness/skills/: __init__.py  job_search.py
backend/app/agent/harness/tools/: __init__.py  job_search.py  local.py
backend/scripts/: dev.py  run_real_conversations.py
backend/tests/: test_agent.py  test_api.py
docs/: SprintDuckAgent-hackathon-demo.html  SprintDuckAgent-hackathon-demo.pptx  agent-refactor-plan.md  architecture.md  hackathon-delivery-plan.md  harness-design.md  plan.md  prd.md  prototype-ui.md  test-cases.md
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  api.ts  styles.css  types.ts
samples/: harness_real_cases.json  real_conversations.json  test_constraints.txt  test_jd.md  test_resume.md
tools/harness/: README.md
tools/skills/: README.md
