[project]
name = "sprintduck-agent"
version = "0.1.0"
description = "Open-source evidence-backed interview sprint agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.6",
  "httpx>=0.27.2",
  "pydantic>=2.10.4",
  "python-dotenv>=1.0.1",
  "python-multipart>=0.0.20",
  "uvicorn[standard]>=0.34.0"
]

[dependency-groups]
dev = [
  "pytest>=8.3.4",
  "pytest-asyncio>=0.25.0"
]

[tool.pytest.ini_options]
pythonpath = ["backend"]
asyncio_mode = "auto"

